resources/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/etcd
                operator: DoesNotExist
      containers:
        - name: jellyfin
          image: jellyfin
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
          resources:
            requests:
              gpu.intel.com/i915: "1"
              memory: 4Gi
            limits:
              gpu.intel.com/i915: "1"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin
      - name: media
        nfs:
          path: /volume1/media
          server: 192.168.1.21
