resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  type: ClusterIP
  ports:
  - port: 8096
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: jellyfin
