resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dvr.crt.lol
    external-dns.alpha.kubernetes.io/target: crt.lol
spec:
  ingressClassName: nginx-external
  rules:
    - host: "dvr.crt.lol"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls:
    - hosts:
      - dvr.crt.lol
